# sphinx-code-tabs

./: CHANGES.rst  MANIFEST.in  README.rst  setup.cfg  setup.py
.github/workflows/: main.yml
doc/: conf.py  index.rst
doc/examples/: codetabs.rst  tabgroup.rst
sphinx_code_tabs/: __init__.py  code-tabs.css  code-tabs.js
