[options]
packages = sphinx_code_tabs
python_requires = >=3.5
install_requires =
    sphinx>=3
    importlib_resources; python_version < '3.7'
include_package_data = true
zip_safe = false

[options.extras_require]
doc =
    sphinx_rtd_theme

[metadata]
name             = sphinx_code_tabs
description      = Sphinx extension for adding alternative code-blocks as selectable tabs
keywords         = sphinx extension alternative code-block tab notebook
platforms        = any
url              = https://github.com/coldfix/sphinx-code-tabs
download_url     = https://pypi.org/project/sphinx_code_tabs
long_description = file: README.rst, CHANGES.rst
author           = Thomas Gläßle
author_email     = thomas@coldfix.de
license          = Unlicense
license_file     = UNLICENSE
project_urls     =
    Source Code = https://github.com/coldfix/sphinx-code-tabs
    Bug Tracker = https://github.com/coldfix/sphinx-code-tabs/issues
    Documentation = https://sphinx-code-tabs.readthedocs.io
classifiers      =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Documentation :: Sphinx
long_description_content_type = text/x-rst

[flake8]
ignore = E221,E241,E251,E402,E701,W504
exclude = docs,.git,build,__pycache__,dist,.eggs
